--- a/wwwroot/css/Account/Login.css
+++ b/wwwroot/css/Account/Login.css
@@ -17,7 +17,7 @@
 }
 .login-box {
     width: 400px;
-    height: 340px;
+    max-height: fit-content;
     box-shadow: 0px 4px 4px 0px #cacaca;
 }
 .login {
@@ -45,6 +45,9 @@
 .loginBtnBox, .registerBtnBox {
     display: flex;
     justify-content: center;
+}
+.registerBtnBox {
+    box-shadow: 0px 4px 4px 0px #cacaca;
 }
 .loginBtn, .registerBtn {
     color: #fff;
