--- a/wwwroot/css/Account/Register.css
+++ b/wwwroot/css/Account/Register.css
@@ -4,103 +4,118 @@
     box-sizing: border-box;
     background-color: #f3f3f3;
     font-family: 'Inria Sans', sans-serif;
-}
-.webname {
+  }
+  .webname {
     font-size: 40px;
     font-weight: bolder;
-}
-
-.content {
+  }
+  
+  .content {
     display: flex;
     min-height: 100vh;
     justify-content: center;
-}
-.register-box {
+  }
+  .register-box {
     width: 400px;
-    height: 470px;
+    max-height: fit-content;
     box-shadow: 0px 4px 4px 0px #cacaca;
-}
-.register {
+  }
+  .register {
     font-size: 32px;
     font-weight: bold;
     color: #0A0076;
-}
-.nameLabel, .phoneLabel, .usernameLabel, .passwordLabel, .confPasswordLabel {
+  }
+  .nameLabel, .phoneLabel, .usernameLabel, .passwordLabel, .confPasswordLabel {
     width: 70px;
     color: #0A0076;
-}
-.nameInput, .phoneInput, .usernameInput, .passwordInput, .confPasswordInput {
+  }
+  .nameInput, .phoneInput, .usernameInput, .passwordInput, .confPasswordInput {
     width: 200px;
     height: 30px;
     border: none;
     border-bottom: 2px solid #ffffff;
     box-shadow: 0px 4px 4px 0px #cacaca;
-}
-.nameInput:focus, .phoneInput:focus, .usernameInput:focus, .passwordInput:focus, .confPasswordInput:focus {
+  }
+  .nameInput:focus, .phoneInput:focus, .usernameInput:focus, .passwordInput:focus, .confPasswordInput:focus {
     outline: none;
     border-bottom-color: #0A0076;
     box-shadow: none;
     transition: all 0.5s ease;
-}
-.acceptBox {
+  }
+  .acceptBox {
     margin-left: 8rem;
-}
-.checkBox:focus {
+  }
+  .checkBox:focus {
     outline: none;
     box-shadow: none;
-}
-
-.checkboxLabel {
+  }
+  
+  .checkboxLabel {
     font-size: 12px;
     color: #0A0076;
-}
-
-.registerBtnBox {
+  }
+  .cancelBtnBox {
+    display: flex;
+    box-shadow: 0px 4px 4px 0px #cacaca;
+  }
+  .cancelBtn {
+    color: #0A0076;
+    background-color: #fff;
+    width: 90px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 4px 0px #cacaca;
+    float: left;
+  }
+  .cancelBtn:hover {
+    background: #f3f3f3;
+    transition: all 0.4s ease;
+  }
+  .registerBtnBox {
     display: flex;
     justify-content: center;
-}
-.registerBtn {
+  }
+  .registerBtn {
     color: #fff;
     background-color: #0A0076;
     width: 90px;
     border-radius: 12px;
     box-shadow: 0px 4px 4px 0px #cacaca;
-}
-.registerBtn:hover {
+  }
+  .registerBtn:hover {
     background: #f3f3f3;
     transition: all 0.4s ease;
-}
-
-
-
-
-
-.footer-box {
+  }
+  
+  
+  
+  
+  
+  .footer-box {
     
     width: 100%;
     height: 160px;
     background-color: #fff;
-}
-.contact {
+  }
+  .contact {
     height: 52px;
     color: #0A0076;
     font-family: 'Inria Sans', sans-serif;
     font-size: 32px;
     font-weight: bold;
-}
-.email {
+  }
+  .email {
     height: 21px;
     color: #0A0076;
     font-family: 'Inria Sans', sans-serif;
     font-size: 16px;
-}
-.facebook {
+  }
+  .facebook {
     color: #0A0076;
-}
-.facebook::after {
+  }
+  .facebook::after {
     content: "";
     flex: 1;
-}
-.facebook:not(:empty)::after {
+  }
+  .facebook:not(:empty)::after {
     margin-left: 89px;
-}
+  }
