--- a/Views/User/Home.cshtml
+++ b/Views/User/Home.cshtml
@@ -13,7 +13,7 @@
     <main class="mainsite mb-4">
         <div class="mainBox text-center">
             <h1 class="welcome">Welcome!</h1>
-            <span class="fs-4">username</span>
+            <span class="fs-4">@Context.Session.GetString("Name")</span>
         </div>
     </main>
 </body>
