--- a/Views/Manager/DeleteComputer.cshtml
+++ b/Views/Manager/DeleteComputer.cshtml
@@ -1,3 +1,4 @@
+@model InternetCafe.Models.Computer
 @{
     Layout = "Manager_Layout";
 }
@@ -16,23 +17,24 @@
             <div class="info mt-4">
                 <div class="infoLine">
                     <span class="name me-4">ID</span>
-                    dddd
+                    @Model.Id
                 </div>
                 <div class="infoLine">
                     <span class="cost me-4">Name</span>
-                    d
+                    @Model.Name
                 </div>
                 <div class="infoLine">
                     <span class="status me-4">Cost</span>
-                    f
+                    @Model.Cost $
                 </div>
                 <div class="infoLine">
                     <span class="id  me-4">Status</span>
-                    g
+                    Off
                 </div>
             </div>
-            <form asp-action="ListComputer" asp-controller="Manager" method="get">
+            <form asp-action="ConfirmDeleteComputer" asp-controller="Manager" method="post">
                 <div class="mt-5">
+                    <input type="hidden" name="id" value="@Model.Id">
                     <button class="btn confirmBtn">Confirm</button>
                 </div>
             </form>
