--- a/wwwroot/css/Manager/Home.css
+++ b/wwwroot/css/Manager/Home.css
@@ -17,18 +17,21 @@
     text-shadow: 0px 4px 4px #cacaca;
 }
 .tableBox {
-    width: 750px;
+    width: 850px;
     height: fit-content;
 }
 .table {
     box-shadow: 0px 4px 4px #cacaca;
 }
 .userId {
-    width: 15%;
+    width: 10%;
 }
 .userName, .compId {
-    width: 20%;
+    width: 15%;
 }
 .compName {
-    width: 40%;
+    width: 35%;
+}
+.startTime {
+    width: 25%;
 }
