--- a/Views/User/HomeUsed.cshtml
+++ b/Views/User/HomeUsed.cshtml
@@ -33,7 +33,7 @@
                 </div>
                 <div class="infoLine">
                     <span class="cost me-4">Cost</span>
-                    @Model.Cost
+                    @Model.Cost.ToString("0.00") $
                 </div>
                 
             </div>
