--- a/Views/Shared/Manager_Layout.cshtml
+++ b/Views/Shared/Manager_Layout.cshtml
@@ -24,7 +24,7 @@
                 <form asp-controller="Manager" asp-action="RevenueByComputer" method="get" class="bg-white">
                     <button class="revenue btn">Revenue</button>
                 </form>
-                <form asp-controller="Account" asp-action="Login" method="get" class="bg-white">
+                <form asp-controller="Account" asp-action="Logout" method="post" class="bg-white">
                     <button class="logout btn">Log out</button>
                 </form>
             </div>
