--- a/Views/Shared/User_Layout.cshtml
+++ b/Views/Shared/User_Layout.cshtml
@@ -29,7 +29,7 @@
                 <form asp-controller="User" asp-action="Deposit" method="get" class="bg-white">
                     <button class="deposit btn">Deposit</button>
                 </form>
-                <form asp-controller="Account" asp-action="Login" method="get" class="bg-white">
+                <form asp-controller="Account" asp-action="Logout" method="post" class="bg-white">
                     <button class="logout btn">Log out</button>
                 </form>
             </div>
